--- a/GE.WebUI/Views/Shared/_ByDateMaterial.cshtml
+++ b/GE.WebUI/Views/Shared/_ByDateMaterial.cshtml
@@ -3,10 +3,12 @@
     Layout = null;
     var itemsCount = 3;
     SX.WebCore.Enums.ModelCoreType mct = ViewBag.ModelCoreType;
+    var first = Model.FirstOrDefault();
+    var last = Model.LastOrDefault();
 }
 
 <div class="by-date-m">
-    <h3>Другие @(mct==SX.WebCore.Enums.ModelCoreType.Article? "статьи":"новости")</h3>
+    <h3>Другие @(mct == SX.WebCore.Enums.ModelCoreType.Article ? "статьи" : "новости")</h3>
     <div class="row">
         @for (int i = 0; i < itemsCount; i++)
         {
@@ -14,14 +16,15 @@
                 @if (i < Model.Length)
                 {
                     var item = Model[i];
+                    var link = string.Format("/{0}/bydatematerial?mid={1}&mct={2}&dir={3}", mct == SX.WebCore.Enums.ModelCoreType.Article ? "articles" : "news", i == 0 ? first.Id : last.Id, mct, i == 0?bool.FalseString.ToLower():bool.TrueString.ToLower());
                     <div class="content @(i==0?"first":i==itemsCount-1?"last":null)">
-                        @if(i==0 || i== itemsCount - 1)
+                        @if (i == 0 || i == itemsCount - 1)
                         {
                             <div class="arrow hidden-xs">
-                                <a href="javscript:void(0)" data-ajax-url="@Url.Action(MVC.News.ByDateMaterial(item.ModelCoreType, item.DateOfPublication))" data-ajax="true" data-ajax-update="#by-date-mat" data-ajax-method="get"><i class="fa @(i==0?"fa-arrow-left":"fa-arrow-right")"></i></a>
+                                <a href="javscript:void(0)" rel="nofollow" data-ajax-url="@link" data-ajax="true" data-ajax-update="#by-date-mat" data-ajax-method="get"><i class="fa @(i==0?"fa-arrow-left":"fa-arrow-right")"></i></a>
                             </div>
                             <div class="arrow hidden-lg hidden-sm hidden-md">
-                                <a href="javscript:void(0)" data-ajax-url="@Url.Action(MVC.News.ByDateMaterial(item.ModelCoreType, item.DateOfPublication))" data-ajax="true" data-ajax-update="#by-date-mat" data-ajax-method="get"><i class="fa @(i==0?"fa-arrow-up":"fa-arrow-down")"></i></a>
+                                <a href="javscript:void(0)" rel="nofollow" data-ajax-url="@link" data-ajax="true" data-ajax-update="#by-date-mat" data-ajax-method="get"><i class="fa @(i==0?"fa-arrow-up":"fa-arrow-down")"></i></a>
                             </div>
                         }
                         <div class="date">@item.DateOfPublication</div>
