--- a/GE.WebUI/Content/less/site.less
+++ b/GE.WebUI/Content/less/site.less
@@ -14,6 +14,22 @@ body {
     color: @color-black;
     background-color: @color-bg;
     background-attachment:fixed !important;
+    
+    @media (max-width: @screen-xs-max) {
+        position: unset;
+        background-position:center center !important;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        background-position:center center !important;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        background-position:center center !important;
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 
 .navbar{
