--- a/GE.WebUI/Content/less/aphorisms.less
+++ b/GE.WebUI/Content/less/aphorisms.less
@@ -62,7 +62,7 @@
 }
 
 .ap-list ul > li {
-    margin-top: @def-pad*2;
+    margin-bottom: @def-pad*2;
 }
 
 .ap-list h3 {
@@ -105,4 +105,8 @@
 .ap-cat > .list-group-item.active {
     border-color: @colr-muted-blue;
     background-color: rgba(255,255,255, 0.1);
+}
+
+.ap-list-page{
+    margin-top:@def-pad*2;
 }
