--- a/GE.WebUI/Content/less/colors.less
+++ b/GE.WebUI/Content/less/colors.less
@@ -12,3 +12,5 @@
 @color-forum-txt:#616161;
 @color-forum-border:@color-bg;
 @color-forum-blue:@color-dark-blue;
+
+@color-white-tr-light:rgba(255,255,255, 0.3);
