--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body>
     @*<div class="small">Уважаемые пользователи! О всех ошибках и пожеланиях просьба сообщать на <a href="mailto:simlex.dev.2014@gmail.com">мыло</a>! Иногда можете попасть на перезаливку сайта и прочие неудобства...<br />
-    Пока определить, какую активность вы совершаете в админ-панеле, не могу. Не стесняемся. Для всего напишу мануалы, чтобы удобно организовать работу</div>*@
+        Пока определить, какую активность вы совершаете в админ-панеле, не могу. Не стесняемся. Для всего напишу мануалы, чтобы удобно организовать работу</div>*@
     <div id="wrapper">
 
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -428,6 +428,12 @@
                                     <li>
                                         <a href="@Url.Action(MVC.Settings.EditSite())">Настройки сайта</a>
                                     </li>
+                                    @if (User.IsInRole("architect"))
+                                    {
+                                        <li>
+                                            <a href="@Url.Action(MVC.Logs.GetLog())"> Скачать лог</a>
+                                        </li>
+                                    }
                                 </ul>
                             </li>
                         }
