--- a/GE.WebUI/Content/less/colors.less
+++ b/GE.WebUI/Content/less/colors.less
@@ -4,13 +4,17 @@
 @color-bg:#ececec;
 @color-red:#c23721;
 @color-dark-blue:#2d3e50;
-@colr-muted-blue:#93a2b1;
+@color-muted-blue:#93a2b1;
+@color-light-blue:#dce0e5;
 @color-gray:#d7d7d7;
 @color-light-gray:#e0e0e0;
 @color-green:#029119;
+@color-img-border:#b6bac8;
 
 @color-forum-txt:#616161;
 @color-forum-border:@color-bg;
 @color-forum-blue:@color-dark-blue;
 
 @color-white-tr-light:rgba(255,255,255, 0.3);
+
+@color-comment-txt:#7a7a7a;
