--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -4,7 +4,7 @@
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
 .mat-info {
-    color: @colr-muted-blue;
+    color: @color-muted-blue;
     display: inline-block;
     width: 100%;
 }
