--- a/GE.WebUI/Content/less/identity-page.less
+++ b/GE.WebUI/Content/less/identity-page.less
@@ -52,5 +52,5 @@
 .identity-page .form-control{
     background-color:transparent;
     border-color:rgba(255,255,255, .5);
-    color:@colr-muted-blue;
+    color:@color-muted-blue;
 }
