--- a/GE.WebUI/Views/Comments/_List.cshtml
+++ b/GE.WebUI/Views/Comments/_List.cshtml
@@ -1,10 +1,19 @@
 ﻿@model VMComment[]
-@{ 
+@{
     Layout = null;
 }
 
-@for (int i = 0; i < Model.Length; i++)
+@if (Model.Any())
 {
-    var item = Model[i];
-    @Html.DisplayFor(x=>item)
+    <div class="comments">
+        @for (int i = 0; i < Model.Length; i++)
+        {
+            var item = Model[i];
+            @Html.DisplayFor(x=>item)
+        }
+    </div>
 }
+else
+{
+    <p class="lead text-warning">Пока комментариев нет. Вы будите первым!</p>
+} 
