--- a/GE.WebAdmin/Content/less/signin.less
+++ b/GE.WebAdmin/Content/less/signin.less
@@ -14,11 +14,18 @@
     vertical-align: middle;
     max-width:100%;
     padding:0 15px;
-    color: #fff;
+    color:white;
 }
 
-.form-signin a{
-    color: #fff;
+.form-signin .form-control{
+    background:none;
+    border-color:rgba(255,255,255,.3);
+    color:white;
+}
+
+.form-signin .btn-primary, .form-signin .btn-primary:focus, .form-signin .btn-primary:active{
+    background: none;
+    outline:none;
 }
 
 .validation-summary-errors > ul {
@@ -30,4 +37,5 @@
 .form-signin .field-validation-error {
     display: inline-block;
     margin-bottom: 10px;
+    float: right;
 }
