--- a/GE.WebUI/Views/Shared/_Footer.cshtml
+++ b/GE.WebUI/Views/Shared/_Footer.cshtml
@@ -51,10 +51,10 @@
                 <div class="col-md-4">
                     <ul class="sign-menu">
                         <li>
-                            <a href="@Url.Action(MVC.Account.Register())">Регистрация</a>
+                            <a href="@Url.Action(MVC.Account.Register())" rel="nofollow">Регистрация</a>
                         </li>
                         <li>
-                            <a href="@Url.Action(MVC.Account.Login())">Войти в аккаунт</a>
+                            <a href="@Url.Action(MVC.Account.Login())" rel="nofollow">Войти в аккаунт</a>
                         </li>
                     </ul>
                 </div>
