--- a/GE.WebAdmin/Views/Account/Login.cshtml
+++ b/GE.WebAdmin/Views/Account/Login.cshtml
@@ -34,11 +34,11 @@
 
             <h2 class="form-signin-heading">@SX.WebCore.Resources.Settings.adminPanelName</h2>
             <br />
-            @Html.LabelFor(x => x.Email, new { @class = "sr-only" })
+            @Html.LabelFor(x => x.Email, new { @class = "sr-only control-label" })
             @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Адрес электронной почты" } })
             @Html.ValidationMessageFor(x => x.Email)
             <br />
-            @Html.LabelFor(x => x.Password, new { @class = "sr-only" })
+            @Html.LabelFor(x => x.Password, new { @class = "sr-only control-label" })
             @Html.EditorFor(x => x.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Пароль" } })
             @Html.ValidationMessageFor(x => x.Password)
             <br />
