--- a/GE.WebUI/Views/Account/Login.cshtml
+++ b/GE.WebUI/Views/Account/Login.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "Log in";
 }
 
+@section head{
+    <meta name="robots" content="noindex" />
+}
+
 <h2>@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
