--- a/GE.WebAdmin/Content/less/author-ap.less
+++ b/GE.WebAdmin/Content/less/author-ap.less
@@ -1,8 +1,8 @@
-﻿#grid-author-ap tr > td:last-child
+﻿#grid-author-ap tr > td:nth-child(2n)
 {
     width:50px;
     text-align:center;
 }
-#grid-author-ap tr > td:last-child img {
+#grid-author-ap tr > td:nth-child(2n) img {
     height:30px;
 }
