--- a/GE.WebUI/Views/Comments/_List.cshtml
+++ b/GE.WebUI/Views/Comments/_List.cshtml
@@ -15,5 +15,5 @@
 }
 else
 {
-    <p class="lead text-warning">Пока комментариев нет. Вы будите первым!</p>
+    <p class="lead text-warning">Пока комментариев нет. Вы будете первым!</p>
 } 
